# pacs008-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-inspect.yml  publish-mcp.yml  release.yml
examples/: mcp_tools.py
pacs008_mcp/: __init__.py  server.py
tests/: conftest.py  test_mcp_server.py
